--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:layout_marginEnd="30dp"
         android:background="@drawable/radius"
         android:backgroundTint="@color/white"
+        android:onClick="onStoped"
         android:text="ПАУЗА"
         android:textColor="#00B7FF"
         app:layout_constraintEnd_toEndOf="parent"
