--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="270dp"
         android:layout_height="270dp"
+        android:layout_marginBottom="300dp"
         android:background="@drawable/radius"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="70dp"
-        tools:layout_editor_absoluteY="45dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -24,7 +27,11 @@
         android:gravity="center"
         android:text="50"
         android:textColor="#00B7FF"
-        android:textSize="64sp" />
+        android:textSize="64sp"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -37,21 +44,19 @@
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/bthPause"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
         android:background="@drawable/radius"
-        android:backgroundTint="@color/white"
-        android:onClick="onStoped"
+        android:onClick="OnStoped"
         android:text="ПАУЗА"
         android:textColor="#00B7FF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
